--- a/src/pages/Links/links.css
+++ b/src/pages/Links/links.css
@@ -59,6 +59,13 @@ border: 0;
 background: transparent;
 }
 
+.empty-text {
+    width: 100%;
+    text-align: center;
+    margin-top: 28px;
+    color: #FFF;
+}
+
 @media(max-width: 715px) {
 .link-container {
     width: 90%;
